--- a/README.adoc
+++ b/README.adoc
@@ -1,10 +1,10 @@
-= Antora Default UI
+= FeatureHub Docs UI
 // Settings:
 :experimental:
 :hide-uri-scheme:
 // Project URLs:
-:url-project: https://gitlab.com/antora/antora-ui-default
-:url-preview: https://antora.gitlab.io/antora-ui-default
+:url-project: https://github.com/featurehub-io/docs-ui.git
+:url-preview: https://docs.featurehub.io
 :url-ci-pipelines: {url-project}/pipelines
 :img-ci-status: {url-project}/badges/master/pipeline.svg
 // External URLs:
@@ -21,19 +21,10 @@
 
 image:{img-ci-status}[CI Status (GitLab CI), link={url-ci-pipelines}]
 
-This project is an archetype that demonstrates how to produce a UI bundle that can be used by {url-antora}[Antora] to generated a documentation site.
-You can see a preview of the default UI at {url-preview}.
+This project is forked from the {url-antora}[Antora] project and is intended to be our documentation based UI. FeatureHub
+uses Antora to provide structured AsciiDoc based documentation that supports release versioning and Github pages.
 
-While the default UI is ready to be used with Antora, the intent is that you'll fork it and customize it for your own needs.
-It's intentionally minimalistic so as to give you a good starting point without requiring too much effort to customize.
-
-== Code of Conduct
-
-The Antora project and its project spaces are governed by our https://gitlab.com/antora/antora/-/blob/HEAD/CODE-OF-CONDUCT.adoc[Code of Conduct].
-By participating, you're agreeing to honor this code.
-Let's work together to make this a welcoming, professional, inclusive, and safe environment for everyone.
-
-== Use the Default UI
+== Use the Docs UI
 
 If you want to simply use the default UI for your Antora-generated site, add the following UI configuration to your playbook:
 
@@ -78,26 +69,8 @@ Next, make sure that you have Node.js installed (which also provides npm).
 
  $ node --version
 
-If this command fails with an error, you don't have Node.js installed.
-If the command doesn't report an LTS version of Node.js (e.g., v10.15.3), it means you don't have a suitable version of Node.js installed.
-In this guide, we'll be installing Node.js 10.
 
-While you can install Node.js from the official packages, we strongly recommend that you use {url-nvm}[nvm] (Node Version Manager) to manage your Node.js installation(s).
-Follow the {url-nvm-install}[nvm installation instructions] to set up nvm on your machine.
-
-Once you've installed nvm, open a new terminal and install Node.js 10 using the following command:
-
- $ nvm install 10
-
-You can switch to this version of Node.js at any time using the following command:
-
- $ nvm use 10
-
-To make Node.js 10 the default in new terminals, type:
-
- $ nvm alias default 10
-
-Now that you have Node.js installed, you can proceed with installing the Gulp CLI.
+ $ brew install node@16
 
 ==== Gulp CLI
 
@@ -157,7 +130,7 @@ These pages provide a representative sample and kitchen sink of content from the
 
 To build the UI and preview it in a local web server, run the `preview` command:
 
- $ gulp preview
+ $ npm run preview
 
 You'll see a URL listed in the output of this command:
 
@@ -178,7 +151,7 @@ Press kbd:[Ctrl+C] to stop the preview server and end the continuous build.
 
 If you need to package the UI so you can use it to generate the documentation site locally, run the following command:
 
- $ gulp bundle
+ $ npm run bundle
 
 If any errors are reported by lint, you'll need to fix them.
 
@@ -187,7 +160,7 @@ You can point Antora at this bundle using the `--ui-bundle-url` command-line opt
 
 If you have the preview running, and you want to bundle without causing the preview to be clobbered, use:
 
- $ gulp bundle:pack
+ $ npm run pack
 
 The UI bundle will again be available at [.path]_build/ui-bundle.zip_.
 
